[gd_scene load_steps=3 format=3 uid="uid://c6vbhga8alsqc"]

[ext_resource type="Script" path="res://Levels/Mini-games/DragNDropMinigame.gd" id="1_fr6qg"]
[ext_resource type="Texture2D" uid="uid://elnli3xe33ia" path="res://Assets/Props/Tiny_Shelf.png" id="2_dwxs4"]

[node name="DragNDropMiniGame" type="Popup"]
disable_3d = true
initial_position = 1
size = Vector2i(400, 470)
visible = true
borderless = false
always_on_top = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
top_level = true
clip_children = 2
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_fr6qg")

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
disable_3d = true
handle_input_locally = false
size = Vector2i(400, 450)
size_2d_override = Vector2i(400, 450)
render_target_update_mode = 4

[node name="ColorRect" type="TextureRect" parent="SubViewportContainer/SubViewport"]
self_modulate = Color(0.533037, 0.533037, 0.533037, 1)
clip_children = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dwxs4")

[node name="Label" type="Label" parent="SubViewportContainer/SubViewport"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "Drag the containers to the correct spots."
horizontal_alignment = 1

[node name="point1" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(820, 500)

[node name="point2" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(920, 500)

[node name="point3" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(1020, 500)

[node name="point4" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(870, 500)

[node name="point5" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(970, 500)

[node name="point6" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(1070, 500)

[node name="point7" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(820, 700)

[node name="point8" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(920, 700)

[node name="point9" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(1020, 700)

[node name="point10" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(970, 700)

[node name="point11" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(1070, 700)

[node name="point12" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(870, 700)
